# Regulens

./: .dockerignore  .env.example  .gitignore  AUTOMATED_SETUP.md  CHAT HISTORY.md  CMakeLists.txt  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  CPP_BUILD_ISSUES.md  DEPLOYMENT.md  DOCUMENTATION_GUIDE.md  DOCUMENTATION_README.md  Dockerfile  Dockerfile.api  Dockerfile.regulatory  FRONTEND_BACKEND_API_ALIGNMENT_TODOS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  PHASE7_A_B_COMPLETE.md  PHASE7_COMPLETE_FINAL.md  PHASE7_FINAL_COMPLETE.md  PHASE7_INTEGRATION_COMPLETE.md  PHASE7_ROADMAP.md  PHASE7_STATUS.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_READINESS_REPORT.md  QUICKSTART.md  README.md  RULE_VIOLATIONS_DETAILED_REPORT.md  TRANSACTION_DATA_SOURCE.md  TRANSACTION_FIXES_COMPLETE.md  TRANSACTION_FIXES_SUMMARY.md  VIOLATIONS_FIXED_SUMMARY.md  WARP.md  WEEK1_WEEK2_INTEGRATION_STATUS.md  WEEK3_COMPLETION.md  WEEK3_PLAN.md  activity_feed_demo.cpp  advanced_agent_demo.cpp  (+54 more)
agents/: CMakeLists.txt  real_agent.cpp  real_agent.hpp  real_agent_demo.cpp
agents/audit_intelligence/: audit_intelligence_agent.cpp  audit_intelligence_agent.hpp  audit_intelligence_ui_demo.cpp
agents/regulatory_assessor/: regulatory_assessor_agent.cpp  regulatory_assessor_agent.hpp  regulatory_assessor_demo.cpp
agents/transaction_guardian/: transaction_guardian_agent.cpp  transaction_guardian_agent.hpp  transaction_guardian_demo.cpp
core/: CMakeLists.txt
core/agent/: agent_orchestrator.cpp  agent_orchestrator.hpp  compliance_agent.cpp  compliance_agent.hpp
data_ingestion/: CMakeLists.txt
infrastructure/: CMakeLists.txt
regulatory_monitor/: CMakeLists.txt  change_detector.cpp  change_detector.hpp  complete_regulatory_demo.cpp  enterprise_ui_demo.cpp  production_regulatory_demo.cpp  production_regulatory_monitor.cpp  production_regulatory_monitor.hpp  regulatory_monitor.cpp  regulatory_monitor.hpp  regulatory_monitor_standalone_ui_demo.cpp  regulatory_monitor_ui_demo.cpp  regulatory_source.cpp  regulatory_source.hpp  rest_api_server.cpp  rest_api_server.hpp  simple_ui_demo.cpp
shared/: CMakeLists.txt  agent_activity_feed.cpp  agent_activity_feed.hpp  decision_tree_optimizer.cpp  decision_tree_optimizer.hpp  error_handler.cpp  error_handler.hpp  event_processor.cpp  event_processor.hpp  feedback_incorporation.cpp  feedback_incorporation.hpp  human_ai_collaboration.cpp  human_ai_collaboration.hpp  knowledge_base.cpp  knowledge_base.hpp  pattern_recognition.cpp  pattern_recognition.hpp  regulatory_knowledge_base.cpp  regulatory_knowledge_base.hpp  risk_assessment.cpp  risk_assessment.hpp  utils.cpp  utils.hpp
shared/agentic_brain/: CMakeLists.txt  advanced_rule_engine.cpp  advanced_rule_engine.hpp  advanced_rule_engine_api_handlers.cpp  advanced_rule_engine_api_handlers.hpp  agent_comm_registry.cpp  agent_comm_registry.hpp  agentic_brain_demo.cpp  agentic_orchestrator.cpp  agentic_orchestrator.hpp  communication_mediator.cpp  communication_mediator.hpp  communication_mediator_api_handlers.cpp  communication_mediator_api_handlers.hpp  consensus_engine.cpp  consensus_engine.h  consensus_engine.hpp  consensus_engine_api_handlers.cpp  consensus_engine_api_handlers.hpp  decision_engine.cpp  decision_engine.hpp  inter_agent_api_handlers.cpp  inter_agent_api_handlers.hpp  inter_agent_communicator.cpp  inter_agent_communicator.hpp  learning_engine.cpp  learning_engine.hpp  llm_interface.cpp  llm_interface.hpp  message_translator.cpp  message_translator.hpp  message_translator_api_handlers.cpp  message_translator_api_handlers.hpp
shared/alerts/: alert_evaluation_engine.cpp  alert_evaluation_engine.hpp  alert_management_handlers.cpp  alert_management_handlers.hpp  notification_service.cpp  notification_service.hpp
shared/analytics/: analytics_api_handlers.cpp  analytics_api_handlers.hpp  decision_analytics.cpp  decision_analytics.hpp  learning_insights.cpp  learning_insights.hpp  rule_performance_analytics.cpp  rule_performance_analytics.hpp
shared/api_config/: api_endpoint_config.cpp  api_endpoint_config.hpp  api_endpoints_config.json  api_migration_helper.cpp  api_migration_helper.hpp  api_migration_strategy.json  api_version_router.cpp  api_version_router.hpp  api_versioning_config.json  api_versioning_service.cpp  api_versioning_service.hpp  error_handling_config.json  error_handling_service.cpp  error_handling_service.hpp  error_response_helpers.cpp  error_response_helpers.hpp  http_method_mapping.json  http_method_validator.cpp  http_method_validator.hpp
shared/api_docs/: openapi_generator.cpp  openapi_generator.hpp
shared/api_registry/: api_endpoint_registrations.cpp  api_endpoint_registrations.hpp  api_registry.cpp  api_registry.hpp  websocket_endpoints.cpp
shared/async_jobs/: async_job_api_handlers.hpp  async_job_manager.cpp  async_job_manager.hpp
shared/audit/: CMakeLists.txt  decision_audit_trail.cpp  decision_audit_trail.hpp
shared/auth/: auth_api_handlers.cpp  auth_api_handlers.hpp  auth_helpers.cpp  auth_helpers.hpp  jwt_parser.cpp  jwt_parser.hpp
shared/cache/: CMakeLists.txt  redis_cache_manager.cpp  redis_cache_manager.hpp  redis_client.cpp  redis_client.hpp
shared/chatbot/: chatbot_api_handlers.cpp  chatbot_api_handlers.hpp  regulatory_chatbot_service.cpp  regulatory_chatbot_service.hpp
shared/collaboration/: CMakeLists.txt  agent_streaming.cpp  agent_streaming.hpp
shared/compliance/: financial_compliance.hpp
shared/config/: config_types.hpp  configuration_manager.cpp  configuration_manager.hpp  configuration_manager_simple.cpp  dynamic_config_api_handlers.cpp  dynamic_config_api_handlers.hpp  dynamic_config_manager.cpp  dynamic_config_manager.hpp  environment_manager.hpp  environment_validator.cpp  environment_validator.hpp
shared/data_ingestion/: ingestion_metrics.cpp  (+5 more)
tests/: CMakeLists.txt  README.md  advanced_agent_test_runner.cpp  advanced_agent_tests.cpp  advanced_agent_tests.hpp  api_integration_tests.cpp  api_test  api_test_script.cpp  example_tests.cpp  run_all_tests.sh  test_main.cpp  unit_tests.cpp
(+1041 files in other folders)
